# quantumshield

./: .gitignore  CLAUDE.md  KICKOFF_PROMPT.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/vulnerable-demo/certs/: server.key  server.pem
examples/vulnerable-demo/config/: nginx.conf
examples/vulnerable-demo/src/: Main.java  auth.py  crypto.js  pqc_pilot.py
quantumshield/: __init__.py  ast_detect.py  cbom.py  cli.py  deps.py  js_detect.py  patterns.py  report.py  sarif.py  scanner.py  suppress.py  tls_probe.py  webapp.py
tests/: test_ast_detect.py  test_cli_gating.py  test_deps.py  test_js_detect.py  test_quantumshield.py  test_sarif.py  test_suppress.py  test_tls_probe.py  test_webapp.py  test_webapp_security.py
