[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumshield"
version = "0.3.0"
description = "Post-quantum cryptographic discovery, CycloneDX 1.6 CBOM generation, and quantum readiness scoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Pranay"}]
keywords = ["post-quantum", "PQC", "CBOM", "CycloneDX", "cryptography", "security", "quantum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
certs = ["cryptography>=41"]
js = ["esprima>=4"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=7", "cryptography>=41", "esprima>=4", "fastapi>=0.110", "httpx>=0.27"]

[project.scripts]
quantumshield = "quantumshield.cli:main"

[tool.setuptools.packages.find]
include = ["quantumshield*"]
