[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name is quantumshield-pqc because `quantumshield` is taken on
# PyPI by an unrelated project. The import package and CLI remain `quantumshield`.
name = "quantumshield-pqc"
version = "0.4.0"
description = "Post-quantum cryptographic discovery, CycloneDX 1.6 CBOM generation, and quantum readiness scoring"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{name = "Pranay"}]
keywords = ["post-quantum", "PQC", "CBOM", "CycloneDX", "cryptography", "security", "quantum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Quality Assurance",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/4p3Ir0n/quantumshield"
Repository = "https://github.com/4p3Ir0n/quantumshield"
Issues = "https://github.com/4p3Ir0n/quantumshield/issues"

[project.optional-dependencies]
certs = ["cryptography>=41"]
js = ["esprima>=4"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]
all = ["cryptography>=41", "esprima>=4", "fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=7", "cryptography>=41", "esprima>=4", "fastapi>=0.110", "httpx>=0.27"]

[project.scripts]
quantumshield = "quantumshield.cli:main"

[tool.setuptools.packages.find]
include = ["quantumshield*"]
